# research-vlm4eo

./: .gitignore  README.md  assemble.py  config.py  config.yaml  evaluation.py  inference.py  main.py  pyproject.toml  result.py  utils.py
evaluators/: base.py  bert.py  f1.py  meteor.py  precision.py  recall.py
results/task_0/: assembled.csv  evaluation.csv  human.csv  task.txt
results/task_0/Gemma3/: 1.png.txt  10.png.txt  11.png.txt  12.png.txt  13.png.txt  14.png.txt  15.png.txt  2.png.txt  3.png.txt  4.png.txt  5.png.txt  6.png.txt  7.png.txt  8.png.txt  9.png.txt
results/task_0/JanusPro7B/: 1.png.txt  10.png.txt  11.png.txt  12.png.txt  13.png.txt  14.png.txt  15.png.txt  2.png.txt  3.png.txt  4.png.txt  5.png.txt  6.png.txt  7.png.txt  8.png.txt  9.png.txt
results/task_0/Phi4/: 1.png.txt  10.png.txt  11.png.txt  12.png.txt  13.png.txt  14.png.txt  15.png.txt  2.png.txt  3.png.txt  4.png.txt  5.png.txt  6.png.txt  7.png.txt  8.png.txt  9.png.txt
results/task_0/Qwen2_5_7B/: 1.png.txt  10.png.txt  11.png.txt  12.png.txt  13.png.txt  14.png.txt  15.png.txt  2.png.txt  3.png.txt  4.png.txt  5.png.txt  6.png.txt  7.png.txt  8.png.txt  9.png.txt
results/task_0/SmolVLM/: 1.png.txt  10.png.txt  11.png.txt  12.png.txt  13.png.txt  14.png.txt  15.png.txt  2.png.txt  3.png.txt  4.png.txt  5.png.txt  6.png.txt  7.png.txt  8.png.txt  9.png.txt
results/task_1/: assembled.csv  evaluation.csv  human.csv  task.txt
results/task_2/: assembled.csv  evaluation.csv  human.csv  task.txt
vllms/: __init__.py  base.py  gemma3.py  janus_pro.py  phi4.py  qwen.py  smolvlm.py
(+129 files in other folders)
